# example

./: README.md
NewName/: pbt_project.yml
NewName/models/: m1.sql
NewName/seeds/: seeds.yml
Yashah/: dbt_project.yml  packages.yml  pbt_project.yml
Yashah/models/: m1.sql
externalKiran/: dbt_project.yml  pbt_project.yml
externalKiran/models/: m1.sql
externalcxhNG/: dbt_project.yml  packages.yml  pbt_project.yml
externalcxhNG/pipelines/: filter_employees_by_age.py
externalcxhNG/prophecy-sources/: sources.yml
externalcxhNG/templates/: pipeline_template.md
forcep/: README.md  pbt_project.yml
news123/: dbt_project.yml
project1/: dbt_project.yml  pbt_project.yml
projectPath/: dbt_project.yml  pbt_project.yml
projectPath/gems/: gem1.py  setup.py
psh/: README.md  pbt_project.yml
safasssd/: dbt_project.yml  packages.yml  pbt_project.yml
simpext2/: dbt_project.yml  packages.yml  pbt_project.yml
simpleExternal2/: README.md  dbt_project.yml  pbt_project.yml
stagingtestpyspark/: dbt_project.yml  packages.yml  pbt_project.yml  pyproject.toml
test/: dbt_project.yml  pbt_project.yml
testcreate/: dbt_project.yml  pbt_project.yml
testyurvaj/: dbt_project.yml  pbt_project.yml
yuvitestpy/: dbt_project.yml  pbt_project.yml  pyproject.toml
yuvitestpy/.prophecy/ide/sources/: metainfo.json
yuvitestpy/connections/: connections.yml
yuvitestpy/templates/: project_template.md
yuvraj/: README.md  dbt_project.yml  pbt_project.yml
yuvraj02/: dbt_project.yml  pbt_project.yml
yuvrajadvanced/: dbt_project.yml  pbt_project.yml
(+75 files in other folders)
